Project app {
  database_type: "MySQL"
}

Table users {
  id             bigint [pk, increment]
  email          varchar(255)  [not null, unique]
  password_hash  varchar(255)  [not null]
  username       varchar(50)   [not null, default: "J"]
  profile_photo  varchar(1024) [not null, default: "http://localhost:8080/pfp"]

  token_version  int           [not null, default: 1]
  is_deleted     int           [not null, default: 0] // TINYINT(1)

  created_at     timestamp     [not null, default: `CURRENT_TIMESTAMP`]
  updated_at     timestamp     [not null, default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]
}

Table user_devices {
  device_id    binary(16)  [pk]
  user_id      bigint      [not null]

  push_token   varchar(512)
  last_seen_at timestamp
  revoked_at   timestamp

  created_at   timestamp   [not null, default: `CURRENT_TIMESTAMP`]

  // UNIQUE (user_id, device_id)
  Indexes {
    (user_id, device_id) [unique, name: "uk_user_device"]
    user_id [name: "idx_ud_user"]
    last_seen_at [name: "idx_ud_last_seen"]
  }
}

Table sessions {
  session_id    bigint       [pk, increment]
  user_id       bigint       [not null]
  device_id     binary(16)   [not null]
  rtk_hash      varbinary(32)[not null]
  token_version int          [not null]
  expires_at    timestamp    [not null]
  revoked_at    timestamp

  created_at    timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  updated_at    timestamp    [not null, default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`]

  // UNIQUE (user_id, device_id) => 单设备单 session
  Indexes {
    (user_id, device_id) [unique, name: "uk_sessions_user_device"]
  }
}

// 外键：锁死设备归属（允许换绑需 ON UPDATE CASCADE）
Ref fk_ud_user: user_devices.user_id > users.id [delete: cascade]

// 关键组合外键（含 ON UPDATE CASCADE 以支持换绑）
Ref fk_sess_user_device: sessions.(user_id, device_id) > user_devices.(user_id, device_id) [delete: cascade, update: cascade]
